# quotes_api

./: .env  .travis.yml  API.md  Cargo.toml  Dockerfile  README.md  diesel.toml  entry.sh
.github/workflows/: docker-publish.yml  rust.yml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2021-01-31-142859_create_users_holdings/: down.sql  up.sql
src/: api.rs  auth.rs  auth_api.rs  cli.rs  database.rs  domain.rs  error.rs  handlers.rs  lib.rs  service.rs
src/domain/: about.rs  login.rs  mod.rs  period.rs  quote.rs  search_result.rs  ticker.rs
src/schema/: generated.rs  mod.rs  views.rs
