[package]
edition = "2018"
version = "0.0.3"
name = "quote_api"
authors = ["@darkest_ruby"]
description = "HTTP API to fetch crypto/shares quotes (uses Y! finance)" 

[dependencies]
regex = "1"
log = "0.4"
actix-web = "3"
chrono = "0.4.19"
hostname = "^0.3"
serde_json = "1.0"
structopt = "0.3.20"
simple_logger = "1.11"
actix-web-httpauth="0.5.0"
yahoo_finance_api = "1.1.3"
serde = { version="1.0.117", features = ["derive"] } 

[[bin]]
name="server"