[package]
edition = "2018"
version = "0.0.7"
name = "quote_api"
authors = ["@darkest_ruby"]
description = "HTTP API to fetch crypto/shares quotes (uses Y! finance)" 

[dependencies]
log = "0.4"
actix-web = "3"
chrono = "0.4.19"
hostname = "^0.3"
serde_json = "1.0"
structopt = "0.3"
jwt-simple = "0.2"
simple_logger = "~1.11"
actix-web-httpauth="0.5"
yahoo_finance_api = "^1.1.4"
serde = { version="1.0.117", features = ["derive"] } 

[[bin]]
name="server"